			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04g: *********************************

IMP: (3/13/06, RK) NCC: delete initial version of local wire paritioning code.

IMP/MAN: (3/13/06, GVG) Multiple selection in cross library copy (Bug #867)

BUG: (3/13/06, GVG) Date/Content in CrossLibCopy dialog was not filled if "Date/Content" toggle
is selected (Bug #869).
FIX: Call showCells function. Side effect: message between "()" only if content is compared otherwise
doesn't have sense.

IMP/MAN: (3/12/06, GVG) Ability to set MaxPermSize option as preference (Bug #866)
If value is zero, then doesn't set anything. New item in General Tab.

IMP/MAN: (3/12/06, GVG) Make saving last DRC date with libraries an option (Bug #847).
New flag in DRC tab.

IMP/MAN: (3/10/06, JKG) Added DELIB file format. This is a just a distributed
    JELIB format, where each cell has it's own file. This will be used for
    CVS version control of cells.

BUG: (3/9/06, GVG) Bug in DRC after fixing Bug #507 (no detecting well good drc date in goodDRC.put())
FIX: Compare DRC date with revision date (must be newer).

BUG: (3/9/06, DN) GUI thread sometimes calls Cell.getTechnology before "tech" field is initialized (Bug #859).
FIX: In NodeInst.newInstance call subCell.getTechnology() to initialize "tech" field.

BUG: (3/9/06, DN) Syntax of export names is not checked.
FIX: Check it in Export.newInstance, Export.rename, and Cell.checkAndRepair .

BUG: (3/9/06, DN) Nodable names must be unique (Bug #850).
FIX: Temporary names are fixed in Bug #860. User names are repaired in CheckAndRepair job.
     New nodes and renamed nodes are checked on uniquie names.
     It is not database invariant yet. It is still GUI constraint.

BUG: (3/9/06, DN) ConcurrentModificationException in Cell.getNewestVersion.
FIX: Add newestVersion field to Cell and maintain it.
